# MindMesh

./: .cursorrules  .env.example  .gitignore  Makefile  README.md  ROADMAP.md  USAGE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  coder.py  critic.py  dynamic.py  planner.py  researcher.py  summarizer.py
backend/app/api/: websocket.py
backend/app/api/routes/: agents.py  hitl.py  tasks.py
backend/app/memory/: relational.py  vector_store.py
backend/app/messaging/: bus.py
backend/app/models/: task.py
backend/app/observability/: tracing.py
backend/app/orchestrator/: __init__.py  dag.py  orchestrator.py
backend/app/tools/: __init__.py  code_runner.py  registry.py  web_search.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/hitl/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/app/tasks/[id]/: page.tsx
frontend/src/components/command/: TaskSubmitForm.tsx
frontend/src/components/dashboard/: AgentDAGView.tsx  AgentStatusCard.tsx  LiveEventFeed.tsx
frontend/src/components/hitl/: ReviewCard.tsx
frontend/src/components/layout/: ComingSoonBadge.tsx  Header.tsx  Sidebar.tsx
frontend/src/hooks/: useTasks.ts  useWebSocket.ts
