[project]
name = "multi-agent-platform"
version = "1.0.0"
description = "Scalable Multi-Agent AI Platform"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    "websockets==12.0",

    # Configuration
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",

    # Database - Relational
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",

    # Database - Vector
    "qdrant-client==1.9.1",

    # Redis / Messaging
    "redis==5.0.4",

    # HTTP Client
    "httpx==0.27.0",
    "aiohttp==3.9.5",

    # LLM / Embeddings
    "openai==1.30.1",
    "sentence-transformers==3.0.0",

    # DAG / Graph
    "networkx==3.3",

    # Docker SDK
    "docker==7.1.0",

    # Observability
    "opentelemetry-api==1.24.0",
    "opentelemetry-sdk==1.24.0",
    "opentelemetry-instrumentation-fastapi==0.45b0",
    "opentelemetry-instrumentation-sqlalchemy==0.45b0",
    "opentelemetry-exporter-otlp==1.24.0",

    # Utilities
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "tenacity==8.3.0",
    "structlog==24.1.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "ruff==0.4.7",
    "mypy==1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
    "ruff==0.4.7",
    "mypy==1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
